validando campos e email

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -284,6 +284,12 @@ section .block-figure img {
     color: #444;
 }
 
+#contact form .form-item.error input,
+#contact form .form-item.error select,
+#contact form .form-item.error textarea {
+    border: 1px solid red;
+}
+
 .btn_submit {
     text-align: center;
     margin: 20px auto;
