--- a/css/estilo.css
+++ b/css/estilo.css
@@ -43,12 +43,14 @@ header #content-header #banner .center .slide {
     width: 100%;
     position: absolute;
     transition: 1s;
+    background: #ffffff;
 }
 
 header #content-header #banner #controlls img {
     position: absolute;
     top: 50%;
     margin: -33px 0 0 0;
+    z-index: 5;
 }
 
 header #content-header #banner #controlls .left {
