Colocando a lista de managers via json e tornando a lbox dinamica

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,6 +51,7 @@ header #content-header #banner #controlls img {
     top: 50%;
     margin: -33px 0 0 0;
     z-index: 5;
+    cursor: pointer;
 }
 
 header #content-header #banner #controlls .left {
