--- a/css/estilo.css
+++ b/css/estilo.css
@@ -295,8 +295,9 @@ section .block-figure img {
     width: 90%;
     background: #ffffff;
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 0 5px;
     color: #444;
+    height: 36px;
 }
 
 #contact form .form-item.error input,
@@ -371,6 +372,10 @@ section .block-figure img {
 #table_info_investidores .container_table .block-left .block {
     flex-basis: calc(50% - 2px);
     border-right: 1px solid #919191;
+}
+
+#table_info_investidores .container_table .block-left .block.mobile {
+    display: none;
 }
 
 #table_info_investidores .container_table .block-left .block:nth-child(2) {
@@ -563,4 +568,83 @@ section .block-figure img {
        width: 100%;
        margin: 0 auto;
     }
+}
+
+@media (max-width: 1024px) {
+    header #content-header .center .block-left {
+        width: 40%;
+    }
+
+    header #content-header .center #logo {
+        margin: 30px 0 0 0;
+    }
+
+    header #content-header .center .block-left .info-banner {
+        padding-bottom: 0;
+    }
+
+    header #content-header .center .block-left .info-banner .sub-title-info-banner {
+        margin-bottom: 0;
+    }
+
+    header #content-header .center .block-right {
+        width: 50%;
+    }
+
+    header #content-header .center .block-right .images img {
+        height: 420px;
+    }
+
+    #info-topcapi .block {
+        font-size: 20px;
+        font-family: "Din Pro Cond";
+    }
+
+    #info-topcapi .block figure img {
+        width: 130px;
+    }
+
+    #whats_is .block-figure img {
+        width: 100%;
+    }
+
+    #table_info_investidores .container_table .block-left,
+    #table_info_investidores .container_table .block-right {
+        flex-basis:  100%;
+
+    }
+
+    #table_info_investidores .container_table .block-left .block {
+        flex-basis: calc(99% / 3);
+    }
+
+    #table_info_investidores .container_table .block-left .block.mobile {
+        display: block;
+        border-left: 1px solid #919191;
+    }
+
+    #table_info_investidores .container_table .block-right .block {
+        display: none;
+    }
+
+    #table_info_investidores .container_table .block-right .map {
+        padding: 20px 20px 50px 20px;
+    }
+
+    #table_info_investidores .container_table #companies ul {
+        justify-content: center;
+    }
+
+    #table_info_investidores .container_table #companies ul li {
+        flex-basis: calc((100% / 3) - 4px);
+        padding: 20px 0;
+    }
+
+    #contact form {
+        width: 80%;
+    }
+}
+
+@media (max-width: 1000px) {
+
 }
