--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,11 +12,13 @@ h1, h2, h3, h4 {
 }
 
 .container {
+    width: 1360px;
     margin: 0 auto;
 }
 
 header {
     width: 100%;
+    background: url('../images/bgHeader.png') repeat-y #ffffff;
 }
 
 header #content-header {
@@ -27,7 +29,6 @@ header #content-header #banner {
     width: 100%;
     overflow: hidden;
     position: relative;
-    background: url('../images/bgHeader.png') repeat-y #ffffff;
 }
 
 header #content-header #banner .center {
@@ -485,6 +486,7 @@ section .block-figure img {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    padding: 20px 0 30px 0;
 }
 
 #table_info_investidores .container_table #companies ul li {
@@ -593,6 +595,7 @@ section .block-figure img {
 
     header #content-header .center .block-right .images img {
         height: 420px;
+        margin-top: 40px;
     }
 
     #info-topcapi .block {
@@ -645,6 +648,37 @@ section .block-figure img {
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 910px) {
+    #for_businessman .block-figure,
+    #for_consumer .block-figure,
+    #whats_is .block-figure,
+    #for_society .block-figure {
+        display: none;
+    }
 
+    #for_businessman .block-text,
+    #for_consumer .block-text,
+    #for_society .block-text,
+    #whats_is .block-text {
+        flex-basis: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    header #content-header .center .block-left {
+        width: 80%;
+        margin: 0 auto;
+        float: none;
+    }
+
+    header #content-header .center .block-right {
+        display: none;
+    }
+}
+
+@media (max-width: 640px) {
+    #info-topcapi {
+        padding: 0 40px;
+        border: 1px solid red !important;
+    }
 }
