--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,6 +23,7 @@ header {
 
 header #content-header {
     width: 100%;
+    border-bottom: 1px solid #dddddd;
 }
 
 header #content-header #banner {
@@ -72,7 +73,6 @@ header #content-header .center .block-left {
 
 header #content-header .center .block-left .info-banner {
     margin: 20px 0 0 30px;
-    padding-bottom: 20px;
 }
 
 header #content-header .center .block-left .info-banner .title-info-banner {
@@ -87,7 +87,6 @@ header #content-header .center .block-left .info-banner .sub-title-info-banner {
     font-family: 'Din Pro Cond';
     font-size: 28px;
     color: #717171;
-    margin-bottom: 30px;
 }
 
 header #content-header .center .block-left .info-banner .button-banner {
@@ -102,12 +101,12 @@ header #content-header .center .block-left .info-banner .button-banner {
 header #content-header .center .block-right {
     width: calc(70% - 70px);
     float: right;
-    margin-right: 70px;
     text-align: right;
+    margin: 20px 70px -5px 0;
 }
 
 header #content-header .center #logo {
-    margin: 110px 0 0 0;
+    margin: 80px 0 0 0;
 }
 
 #info-topcapi {
@@ -653,7 +652,7 @@ section .block-figure img {
     #for_consumer .block-figure,
     #whats_is .block-figure,
     #for_society .block-figure {
-        display: none;
+        /*display: none;*/
     }
 
     #for_businessman .block-text,
@@ -754,6 +753,7 @@ section .block-figure img {
     }
 }
 
+
 @media (max-width: 480px) {
 
     #table_info_investidores .container_table .block-left .managers .block-managers .text .texts {
@@ -780,4 +780,59 @@ section .block-figure img {
         width: 90%;
         font-size: 16px;
     }
+}
+
+@media (max-width: 400px) {
+    header #content-header #banner #controlls {
+        display: none;
+    }
+
+    header #content-header .center .block-left .info-banner .title-info-banner {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    header #content-header .center {
+        width: 100%;
+    }
+
+    header #content-header .center .block-left .info-banner .sub-title-info-banner {
+        font-size: 18px;
+    }
+
+    header #content-header .center #logo img {
+        width: 150px;
+        margin-left: 20px;
+    }
+
+    header #content-header .center .block-left {
+        width: 65%;
+        margin: 0 auto;
+        float: left;
+    }
+
+    header #content-header .center .block-left .info-banner {
+        margin: 10px 0 0 21px;
+    }
+
+    header #content-header .center .block-left .info-banner .sub-title-info-banner {
+        font-size: 18px;
+    }
+
+    header #content-header .center .block-right {
+        display: block;
+        position: absolute;
+    }
+
+    header #content-header .center .block-right .images img {
+        height: 250px;
+        margin-top: 25px;
+        position: absolute;
+        z-index: 0;
+    }
+
+    header #content-header .center .block-left .info-banner .sub-title-info-banner {
+        margin-bottom: 30px;
+    }
+
 }
